--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "compose:down": "(cd app && docker-compose down --remove-orphans)",
     "compose:up": "(cd app && docker-compose up -d --build)",
     "compose:up:dev": "(cd app && docker-compose -f docker-compose.dev.yml up -d --build)",
-    "compose:down:dev": "(cd app && docker-compose -f docker-compose.dev.yml down --remove-orphans)"  
+    "compose:down:dev": "(cd app && docker-compose -f docker-compose.dev.yml down --remove-orphans)"
   },
   "author": "Trybe",
   "devDependencies": {
@@ -30,6 +30,7 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "camelcase": "6.3.0",
     "http-status-codes": "2.2.0",
     "jsonwebtoken": "8.5.1",
